# mcp-database-connector-lite

./: .gitignore  README.md  pyproject.toml  server.py
mcp_database_connector_lite/: __init__.py  server.py
