[project]
name = "mcp-database-connector-lite"
version = "1.0.0"
description = "Free SQLite MCP server. Connect your AI agent to a database in 30 seconds. Part of the MCP Starter Arsenal."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "TiranTech"}]
readme = "README.md"
keywords = ["mcp", "sqlite", "database", "ai-agent", "claude", "llm", "model-context-protocol"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/tiranmoskovitch-dev/mcp-database-connector-lite"
"Full Version" = "https://whop.com/checkout/plan_32FGKXhYcUV3p"
"MCP Starter Arsenal" = "https://whop.com/checkout/plan_rdUWYjU5aDoA0"

[project.scripts]
mcp-db-lite = "mcp_database_connector_lite.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
